# PharmaBot

./: .gitignore  Dockerfile  GITIGNORE_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
configs/: logging.yaml  prometheus.yml  settings.yaml
configs/grafana/dashboards/: dashboard.yml  pharmaai.json
models/: .gitkeep
pharmaai/api/: app.py  middleware.py
pharmaai/api/routes/: ask.py  classify.py  search.py
pharmaai/core/: cache.py  config.py  database.py  metrics.py  schemas.py
pharmaai/embeddings/: index.py  models.py
pharmaai/inference/: notifications.py  query_generator.py  rag.py  small_lm.py
pharmaai/ingestion/: api_workers.py  custom_search.py  news_worker.py  progress_tracker.py  queue_publisher.py
pharmaai/processing/: domain_classifier.py  formatter.py  summariser.py
pharmaai/retrieval/: fusion.py  search.py
rasa_bot/: actions.py  config.yml  domain.yml  endpoints.yml  nlu.yml  rules.yml  stories.yml
scripts/: backfill.py  benchmark.py  download_models.py  init_db.py  run_bot.sh  run_ingestion.py
tests/: test_suite.py
training/: data_generator.py  eval.py  train_classifier.py  train_slm.py
